--- a/Project_WebDev/pages/Local_Entertainment.html
+++ b/Project_WebDev/pages/Local_Entertainment.html
@@ -34,7 +34,7 @@
               <a class="nav-link fs-4" href="Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active" aria-current="page" href="Local_Entertainment.html">Entertainment</a>
+              <a class="nav-link disabled fs-4 active rounded-pill" style="background-color: #f1ff33;" aria-current="page" href="Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fs-4" href="Lodging.html">Lodging</a>
