--- a/Project_WebDev/pages/Hot_Destination.html
+++ b/Project_WebDev/pages/Hot_Destination.html
@@ -19,7 +19,7 @@
 
   <body style="font-family: 'DM Sans', sans-serif;">
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg navbar-light rounded-bottom" style="background-color:#00BFFF ;">
+    <nav class="navbar navbar-expand-lg navbar-light rounded-bottom sticky-top" style="background-color:#00BFFF ;">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"><img src="../Gambar/Logo1.png" alt="" width="75px" style="background-color: rgb(255, 255, 255)" class="rounded-circle"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active" aria-current="page" href="Hot_Destination.html">Destination</a>
+              <a class="nav-link disabled fs-4 active rounded-pill" style="background-color: #f1ff33;" aria-current="page" href="Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fs-4" href="Local_Cuisine.html">Cuisine</a>
@@ -68,10 +68,10 @@
     
     <section class="showcase">
       <div class="container-fluid p-0">
-          <div class="row g-0">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
+          <div class="row g-0" style="padding-top: 50px;">
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/lembah_hijau.jpg" class="rounded-3"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                  <h2>Fully Responsive Design</h2>
+                  <h2>Water Park Lembah Hijau</h2>
                   <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
               </div>
           </div>
