--- a/Project_WebDev/pages/Local_Cuisine.html
+++ b/Project_WebDev/pages/Local_Cuisine.html
@@ -31,7 +31,7 @@
               <a class="nav-link fs-4" href="Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active" aria-current="page" href="Local_Cuisine.html">Cuisine</a>
+              <a class="nav-link disabled fs-4 active rounded-pill" style="background-color: #f1ff33;" aria-current="page" href="Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fs-4" href="Local_Entertainment.html">Entertainment</a>
