--- a/Project_WebDev/pages/Lodging.html
+++ b/Project_WebDev/pages/Lodging.html
@@ -37,7 +37,7 @@
               <a class="nav-link fs-4" href="Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active" aria-current="page" href="Lodging.html">Lodging</a>
+              <a class="nav-link disabled fs-4 active rounded-pill" style="background-color: #f1ff33;" aria-current="page" href="Lodging.html">Lodging</a>
             </li>
           </ul>
           <div class="nav-item dropdown" style="padding-left: 100px;">
