--- a/Project_WebDev/pages/Hot_Destination.html
+++ b/Project_WebDev/pages/Hot_Destination.html
@@ -70,25 +70,46 @@
       <div class="container-fluid p-0">
           <div class="row g-0" style="padding-top: 50px;">
               <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/lembah_hijau.jpg" class="rounded-3"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                  <h2>Water Park Lembah Hijau</h2>
-                  <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
+                  <h2>Lembah Hijau Lampung</h2>
+                  <p class="lead mb-0">Taman Wisata Lembah Hijau merupakan Taman Wisata, dan Waterboom terbesar di Lampung. Lokasi ini merupakan pionir wisata alam yang ada di Bumi Ruwa Jurai yang tidak kalah dengan Kebun Binatang Ragunan di Jakarta Selatan atau Waterboom Lippo Cikarang sekalipun.
+                    Sejak dibuka pada April 2007 lalu, taman wisata alam buatan Lembah Hijau sudah menjadi tempat rekreasi favorit di Lampung. Tempat rekreasi alam yang menempati lahan seluas 30 hektar ini berada di Jalan Radin Imba Kesuma Ratu, Kampung Sukajadi, Sukadanaham, Tanjung Karang Barat, Bandar Lampung.
+                    Lembah hijau terdiri dari taman rekreasi dan kebun binatang mini. Berada di area perbukitan dihiasi lembah dan sungai kecil. Tidak berlebihan apabila taman rekreasi ini diberi nama Lembah Hijau. Taman hijau yang sejuk ini menawarkan banyak kesenangan dan hiburan bagi masyarakat Lampung dan khususnya bagi wisatawan dalam negeri yang datang ke Lampung.
+                   area yang luas, Taman Wisata Lembah Hijau menyediakan berbagai wahana hiburan variatif di antaranya adalah: taman satwa, kolam renang dan waterboom, Cinema 4D, Boom Boom Car, arena bermain sepak bola, kereta mini, dan lainnya.
+                  </p>
               </div>
           </div>
           <div class="row g-0">
-              <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
-              <div class="col-lg-6 my-auto showcase-text">
-                  <h2>Updated For Bootstrap 5</h2>
-                  <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 5!</p>
+              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Pulau Tegal Mas.jpeg" height="500px" class="rounded-3"></div>
+              <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+                  <h2>Pulau Tegal Mas</h2>
+                  <p class="lead mb-0">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yang menyebutnya mirip dengan Maladewa, karena eksotisme alam & penginapan terapung yang ada di sekelilingnya.
+                    Pulau Tegal Mas seolah telah menjadi magnet yang memikat hati para wisatawan sejak perkembangan akhirnya pada tahun 2017. Tak sebatas turis domestik, destinasi wisata yang berdiri di atas lahan seluas 113 Ha ini juga mulai dilirik oleh wisatawan dari berbagai negara.
+                    Kekayaan biodiversitas yang dimiliki Pulau Tegal Mas, terutama alam bawah lautnya, dinilai tak kalah dengan lokasi lain di Indonesia. Sangat cocok untuk dieksplor setiap orang yang gemar melakukan aktivitas snorkeling atau diving.
+                  Disini wisatawan akan dimanjakan dengan keindahan berbagai biota laut, mulai dari terumbu karang, anemon, hingga berbagai jenis ikan yang menjadi penghuninya.
+                  Sebagai sarana penunjang, tersedia pula dive center serta snorkeling center yang bisa dimanfaatkan pengunjung untuk informasi dan penyediaan peralatan penyelaman.
+                  </p>
               </div>
           </div>
           <div class="row g-0">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                  <h2>Easy to Use & Customize</h2>
-                  <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-              </div>
+            <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Pulau-Pahawang-Lampung.jpg" class="rounded-3"></div>
+            <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
+                <h2>Pulau Pahawang</h2>
+                <p class="lead mb-0">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Saat ini Pulau ini mulai sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.
+                  Pulau Pahawang memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Pulau ini sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.</p>
+            </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Taman Nasional Way Kambas.jpg" height="500px" class="rounded-3"></div>
+          <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+              <h2>Taman Nasional Way Kambas</h2>
+              <p class="lead mb-0">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisatawan. Termasuk Taman Nasional Way Kambas.
+                Sebagai tempat pelestarian gajah dan badak, taman nasional ini ada bertujuan untuk sarana konservasi dan zonasi berbagai fauna dari kepunahan. Selain itu juga sebagai sarana edukasi kepada wisatawan agar lebih cinta fauna dan melestarikannya.
+                Fasilitas dalam Taman Nasional ini sudah sangat memadai. Sarana dan prasarananya bisa dikatakan tersedia dan dikelola dengan baik.
+                Mulai dari penginapan, arena-arena wisata, pusat informasi, WC, dan mushola Selain pemandangan alamnya yang indah, tentu taman nasional ini memiliki banyak daya tarik yang menjadi keunikannya tersendiri. Terlebih lagi ikon gajah sumatranya, tentu binatang berukuran besar ini sangat menarik perhatian wisatawan..</p>
           </div>
+      </div>
+
       </div>
   </section>
 
