--- a/Project_WebDev/pages/Local_Entertainment.html
+++ b/Project_WebDev/pages/Local_Entertainment.html
@@ -19,7 +19,7 @@
 
   <body style="font-family: 'DM Sans', sans-serif;">
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg navbar-light rounded-bottom" style="background-color:#00BFFF ;">
+    <nav class="navbar navbar-expand-lg navbar-light rounded-bottom sticky-top" style="background-color:#00BFFF ;">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"><img src="../Gambar/Logo1.png" alt="" width="75px" style="background-color: rgb(255, 255, 255)" class="rounded-circle"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
