--- a/Project_WebDev/pages/Lodging.html
+++ b/Project_WebDev/pages/Lodging.html
@@ -19,7 +19,7 @@
 
   <body style="font-family: 'DM Sans', sans-serif;">
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg navbar-light rounded-bottom" style="background-color:#00BFFF ;">
+    <nav class="navbar navbar-expand-lg navbar-light rounded-bottom sticky-top" style="background-color:#00BFFF ;">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"><img src="../Gambar/Logo1.png" alt="" width="75px" style="background-color: rgb(255, 255, 255)" class="rounded-circle"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,50 @@
       </div>
     </nav>
     <!--Isian-->
-          <h1 class="text-center display-1">Selamat Datang!</h1>
+    <section class="showcase">
+      <div class="container-fluid p-0">
+          <div class="row g-0" style="padding-top: 50px;">
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Swiss-Belhotel Lampung.jpg" class="rounded-3"></div>
+              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
+                  <h2>Swiss-Belhotel Lampung</h2>
+                  <p class="lead mb-0">Swiss-Belhotel Lampung adalah hotel bintang 4 bertaraf internasional di Lampung dengan pemandangan laut, bukit serta landscape kota Lampung yang indah. Hotel kelas atas yang mewah ini berjarak 4 km dari CitraGarden Waterpark dan 9 km dari Museum Lampung.
+                    Hotel ini menawarkan 167 kamar, mulai dari Kamar Deluxe hingga Kamar Presidential Suite yang mewah.
+                    Kamar elegan yang bernuansa hangat dilengkapi dengan Wi-Fi gratis, TV layar datar, alat pembuat kopi, serta brankas. Kamar di kelas yang lebih tinggi dan suite memiliki kulkas mini, area duduk, dan kamar tidur terpisah. Suite di kelas yang lebih tinggi dilengkapi dengan furnitur mewah, ruang keluarga dan ruang makan, serta jendela setinggi langit-langit.
+                    Layanan antar-jemput bandara gratis disediakan. Terdapat kafe 24 jam di tepi kolam renang, bar modern 24 jam, dan restoran steak formal dengan pemandangan laut. Fasilitas lainnya meliputi kolam renang outdoor dan gym.
+                    </p>
+              </div>
+          </div>
+          <div class="row g-0">
+              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Sheraton Lampung Hotel.jpeg" height="500px" class="rounded-3"></div>
+              <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+                  <h2>Sheraton Lampung Hotel</h2>
+                  <p class="lead mb-0">Hotel dan pusat konferensi kelas atas yang terletak di kawasan bisnis kota ini berjarak 4 km dari stasiun kereta Tanjung Karang dan 3 km dari tempat berbelanja di Mal Kartini.
+                    Kamar-kamar bernuansa santai dilengkapi dengan Wi-Fi gratis, TV layar datar, minibar, serta pembuat teh dan kopi. Beberapa kamar memiliki pemandangan kolam renang atau taman. Room service tersedia 24 jam.
+                    Tersedia tempat parkir gratis. Terdapat restoran yang menyajikan hidangan internasional, kedai kopi/toko roti, bar lobi, dan teras. Fasilitas lainnya termasuk kolam renang outdoor dengan bak mandi air panas, serta gym, dan lapangan tenis dengan penerangan. Business center dan ruang konferensi juga tersedia. Sarapan dikenakan biaya tambahan.</p>
+              </div>
+          </div>
+          <div class="row g-0">
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Novotel_Lampung.jpg" class="rounded-3"></div>
+              <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
+                  <h2>Novotel Lampung</h2>
+                  <p class="lead mb-0">Terletak 11 km dari taman rekreasi air dan taman rekreasi Lembah Hijau, hotel santai di gedung indah ini juga berjarak 13 km dari Museum Lampung dan 15 km dari Pantai Mutun.
+                    Menampilkan panorama gunung dan pantai, kamar bernuansa hangat menyediakan Wi-Fi, TV layar datar, fasilitas pembuat teh dan kopi, serta minibar dan brankas. Kamar di kelas yang lebih tinggi dilengkapi ruang keluarga dan jendela setinggi langit-langit.
+                    Fasilitas meliputi kolam air panas indoor dan outdoor, serta 2 bar dan sebuah restoran internasional. Ada juga spa, gym, dan sauna, serta business center dan tempat parkir.</p>
+              </div>
+          </div>
+          <div class="row g-0">
+            <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Emersia Hotel & Resort.jpg" height="500px" class="rounded-3"></div>
+            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+                <h2>Emersia Hotel & Resort</h2>
+                <p class="lead mb-0">Hotel kelas atas di gedung berfasad kaca modern ini memiliki panorama laut Jawa dan pegunungan di sekitarnya. Jaraknya 2 km dari Stasiun Tanjung Karang dan 9 km dari Pantai Tirtayasa.
+
+                  Dilengkapi jendela setinggi langit-langit berpanorama laut, kolam renang, atau gunung, kamar sederhana ini dilengkapi Wi-Fi gratis, TV layar datar, bar mini, serta fasilitas pembuat teh dan kopi. Suite memiliki area tempat duduk, sementara suite di kelas yang lebih tinggi memiliki ruang keluarga/ruang makan terpisah. Anak-anak berusia 5 ke bawah dapat menginap tanpa biaya tambahan jika ditemani oleh orang dewasa.
+                  
+                  Fasilitas meliputi restoran yang luas, bar koktail, serta teras dengan panorama laut. Ada juga kolam outdoor dan gym.</p>
+            </div>
+        </div>
+      </div>
+  </section>
 
 
     <!--Footer-->
