--- a/Project_WebDev/pages/Local_Cuisine.html
+++ b/Project_WebDev/pages/Local_Cuisine.html
@@ -68,7 +68,7 @@
     <section class="showcase">
       <div class="container-fluid p-0">
           <div class="row g-0" style="padding-top: 50px;">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gulai-Taboh.jpg" class="rounded-3"></div>
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gulai-Taboh.jpg" height="420px" class="rounded-3 w-100"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
                   <h2>Gulai Taboh</h2>
                   <p class="lead mb-0">Makanan yang satu ini berasal dari Lampung Barat. Dalam bahasa setempat, gulai taboh berarti
@@ -77,17 +77,14 @@
               </div>
           </div>
           <div class="row g-0">
-              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Tempoyang.jpg" height="420px" class="rounded-3"></div>
+              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Tempoyang.jpg" height="420px" class="rounded-3 float-end w-100"></div>
               <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2>Tempoyang</h2>
-                  <p class="lead mb-0">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi
-                     yang memiliki rasa yang sangat asam. Fermentasi dilakukan selama 2 hingga dengan 5 hari, setelah daging buah durian ditambahkan dengan garam dan cabe rawit di lemari pendingin. Hal itu dilakukan untuk mempercepat prosesnya.
-                     Kemudian, hasil fermentasinya biasanya dijadikan sebagai bahan pembuat sambal, dengan cara ditambah campuran bawang merah, bawang putih, dan juga cabai merah, serta cabai rawit halus. Sebenarnya, tempoyang dapat dimakan langsung, namun banyak orang yang tidak tahan dengan aromanya yang berasal dari rasa asam hasil fermentasi. Beberapa orang mengkonsumsi tempoyang apa adanya.
-                     Kuliner tempoyang atau tempoyak ini juga terkenal di beberapa daerah luar Lampung dan Sumatra seperti Kalimantan, Jawa, dan bahkan di daerah Malaysia.</p>
+                  <h2 class="ps-2">Tempoyang</h2>
+                  <p class="lead mb-0 text-break ps-2">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi yang memiliki rasa yang sangat asam. Fermentasi dilakukan selama 2 hingga dengan 5 hari, setelah daging buah durian ditambahkan dengan garam dan cabe rawit di lemari pendingin. Hal itu dilakukan untuk mempercepat prosesnya. Kemudian, hasil fermentasinya biasanya dijadikan sebagai bahan pembuat sambal, dengan cara ditambah campuran bawang merah, bawang putih, dan juga cabai merah, serta cabai rawit halus. Sebenarnya, tempoyang dapat dimakan langsung, namun banyak orang yang tidak tahan dengan aromanya yang berasal dari rasa asam hasil fermentasi. Beberapa orang mengkonsumsi tempoyang apa adanya. Kuliner tempoyang atau tempoyak ini juga terkenal di beberapa daerah luar Lampung dan Sumatra seperti Kalimantan, Jawa, dan bahkan di daerah Malaysia.</p>
               </div>
           </div>
           <div class="row g-0">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gabing.jpg" class="rounded-3"></div>
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gabing.jpg"  height="420px" class="rounded-3 w-100"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
                   <h2>Gabing</h2>
                   <p class="lead mb-0">Gabing merupakan makanan berbahan utama batang kelapa muda, dengan proses pembuatan yang relatif sederhana. Batang kelapa yang masih muda diiris memanjang, kemudian direbus dengan bumbu sesuai dengan selera pembuatnya.
@@ -97,10 +94,10 @@
               </div>
           </div>
           <div class="row g-0">
-            <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Seruit.jpg" height="500px" class="rounded-3"></div>
+            <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Seruit.jpg" height="420px" class="rounded-3 float-end w-100"></div>
             <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2>Seruit</h2>
-                <p class="lead mb-0">Kuliner seruit ini terbuat dari ikan bakar, yang disajikan dengan berbagai macam sambal khas dari kota Bandar Lampung, misalnya sambal tempoyak udang dan sambal asam kembang.
+                <h2 class="ps-2">Seruit</h2>
+                <p class="lead mb-0 ps-2">Kuliner seruit ini terbuat dari ikan bakar, yang disajikan dengan berbagai macam sambal khas dari kota Bandar Lampung, misalnya sambal tempoyak udang dan sambal asam kembang.
                   Seruit dapat menggunakan berbagai macam ikan, namun jenis ikan yang biasanya digunakan dalam kuliner ini adalah ikan sungai, contohnya ikan balide, ikan layis, dan ikan baung. Sayuran sering disajikan bersamaan dengan seruit sebagai lalapan.</p>
             </div>
         </div>
