--- a/Project_WebDev/index.html
+++ b/Project_WebDev/index.html
@@ -68,117 +68,67 @@
     <div class="card bg-dark text-white">
       <img src="Gambar/background.jfif" height="600px" class="card-img" alt="...">
       <div class="card-img-overlay">
-        <h5 class="card-title text-md-center">Selamat Datang !</h5>
+        <h5 class="card-title text-md-center display-1 text-black pt-5">Selamat Datang !</h5>
       </div>
     </div>
-
-            <!-- Section-->
-            <section class="py-5">
-              <div class="container px-4 px-lg-5 mt-5">
-                  <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                      <div class="col mb-5">
-                          <div class="card h-100">
-                              <!-- Product image-->
-                              <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                              <!-- Product details-->
-                              <div class="card-body p-4">
-                                  <div class="text-center">
-                                      <!-- Product name-->
-                                      <h5 class="fw-bolder">Fancy Product</h5>
-                                      <!-- Product price-->
-                                      $40.00 - $80.00
-                                  </div>
-                              </div>
-                              <!-- Product actions-->
-                              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-5">
-                          <div class="card h-100">
-                              <!-- Sale badge-->
-                              <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                              <!-- Product image-->
-                              <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                              <!-- Product details-->
-                              <div class="card-body p-4">
-                                  <div class="text-center">
-                                      <!-- Product name-->
-                                      <h5 class="fw-bolder">Special Item</h5>
-                                      <!-- Product reviews-->
-                                      <div class="d-flex justify-content-center small text-warning mb-2">
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                      </div>
-                                      <!-- Product price-->
-                                      <span class="text-muted text-decoration-line-through">$20.00</span>
-                                      $18.00
-                                  </div>
-                              </div>
-                              <!-- Product actions-->
-                              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-5">
-                          <div class="card h-100">
-                              <!-- Sale badge-->
-                              <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                              <!-- Product image-->
-                              <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                              <!-- Product details-->
-                              <div class="card-body p-4">
-                                  <div class="text-center">
-                                      <!-- Product name-->
-                                      <h5 class="fw-bolder">Sale Item</h5>
-                                      <!-- Product price-->
-                                      <span class="text-muted text-decoration-line-through">$50.00</span>
-                                      $25.00
-                                  </div>
-                              </div>
-                              <!-- Product actions-->
-                              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-5">
-                          <div class="card h-100">
-                              <!-- Product image-->
-                              <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                              <!-- Product details-->
-                              <div class="card-body p-4">
-                                  <div class="text-center">
-                                      <!-- Product name-->
-                                      <h5 class="fw-bolder">Popular Item</h5>
-                                      <!-- Product reviews-->
-                                      <div class="d-flex justify-content-center small text-warning mb-2">
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                          <div class="bi-star-fill"></div>
-                                      </div>
-                                      <!-- Product price-->
-                                      $40.00
-                                  </div>
-                              </div>
-                              <!-- Product actions-->
-                              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+    <section class="py-5">
+      <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+          <div class="col mb-5">
+            <div class="card h-100">
+              <img class="card-img-top" src="Gambar/destination.jpg" alt="..." />
+              <div class="card-body p-4">
+                <div class="text-center">
+                  <h5 class="fw-bolder">Destination</h5>
+                </div>
               </div>
-          </section>
-
-    <!--Footer-->
+              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pages/Hot_Destination.html">Go To</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class="card h-100">
+              <img class="card-img-top" src="Gambar/makanan.jpeg" alt="..." />
+              <div class="card-body p-4">
+                <div class="text-center">
+                  <h5 class="fw-bolder">Cuisine</h5>
+                </div>
+              </div>
+              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pages/Local_Cuisine.html">Go To</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class="card h-100">
+              <img class="card-img-top" src="Gambar/enterteinment.jpg" height="180px" alt="..." />
+              <div class="card-body p-4">
+                <div class="text-center">
+                  <h5 class="fw-bolder">Entertainment</h5>
+                </div>
+              </div>
+              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pages/Local_Entertainment.html">Go To</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-5">
+            <div class="card h-100">
+              <img class="card-img-top" src="Gambar/lodging.jpeg" alt="..." />
+              <div class="card-body p-4">
+                <div class="text-center">
+                  <h5 class="fw-bolder">Lodging</h5>
+                </div>
+              </div>
+              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pages/Lodging.html">Go To</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="bd-footer py-1 mt-3 rounded-top" style="background-color:#00BFFF ;">
       <div class="container py-4">
         <div class="col-lg-5">
