--- a/Project_WebDev/index.html
+++ b/Project_WebDev/index.html
@@ -68,7 +68,7 @@
     <div class="card bg-dark text-white">
       <img src="Gambar/background.jfif" height="600px" class="card-img" alt="...">
       <div class="card-img-overlay">
-        <h5 class="card-title text-md-center display-1 text-black pt-5">Selamat Datang !</h5>
+        <h5 class="card-title text-md-center display-1 text-white pt-5">Selamat Datang di Lampung</h5>
       </div>
     </div>
     <section class="py-5">
