--- a/Project_WebDev/index.html
+++ b/Project_WebDev/index.html
@@ -129,6 +129,8 @@
         </div>
       </div>
     </section>
+    
+    <!--footer-->
     <footer class="bd-footer py-1 mt-3 rounded-top" style="background-color:#00BFFF ;">
       <div class="container py-4">
         <div class="col-lg-5">
