--- a/Project_WebDev/pages/Local_Cuisine.html
+++ b/Project_WebDev/pages/Local_Cuisine.html
@@ -70,7 +70,7 @@
           <div class="row g-0" style="padding-top: 50px;">
               <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gulai-Taboh.jpg" height="420px" class="rounded-3 w-100"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2>Gulai Taboh</h2>
+                  <h2 class="text-md-center">Gulai Taboh</h2>
                   <p class="lead mb-0">Makanan yang satu ini berasal dari Lampung Barat. Dalam bahasa setempat, gulai taboh berarti
                      ‘hidangan sayur yang gurih’. Makanan ini memang terkenal sangat gurih. Hidangan ini berisikan sayuran-sayuran khas Lampung
                       termasuk melinjo, kacang-kacangan, labu siam, dan ubi jalar yang dimasak dengan santan dan rempah-rempah. Masyarakat Lampung juga sering menghidangkan makanan ini dengan ikan dan udang agar menambah lebih citarasa.</p>
@@ -79,14 +79,14 @@
           <div class="row g-0">
               <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Tempoyang.jpg" height="420px" class="rounded-3 float-end w-100"></div>
               <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2 class="ps-2">Tempoyang</h2>
+                  <h2 class="ps-2 text-md-center">Tempoyang</h2>
                   <p class="lead mb-0 text-break ps-2">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi yang memiliki rasa yang sangat asam. Fermentasi dilakukan selama 2 hingga dengan 5 hari, setelah daging buah durian ditambahkan dengan garam dan cabe rawit di lemari pendingin. Hal itu dilakukan untuk mempercepat prosesnya. Kemudian, hasil fermentasinya biasanya dijadikan sebagai bahan pembuat sambal, dengan cara ditambah campuran bawang merah, bawang putih, dan juga cabai merah, serta cabai rawit halus. Sebenarnya, tempoyang dapat dimakan langsung, namun banyak orang yang tidak tahan dengan aromanya yang berasal dari rasa asam hasil fermentasi. Beberapa orang mengkonsumsi tempoyang apa adanya. Kuliner tempoyang atau tempoyak ini juga terkenal di beberapa daerah luar Lampung dan Sumatra seperti Kalimantan, Jawa, dan bahkan di daerah Malaysia.</p>
               </div>
           </div>
           <div class="row g-0">
               <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Gabing.jpg"  height="420px" class="rounded-3 w-100"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2>Gabing</h2>
+                  <h2 class="text-md-center">Gabing</h2>
                   <p class="lead mb-0">Gabing merupakan makanan berbahan utama batang kelapa muda, dengan proses pembuatan yang relatif sederhana. Batang kelapa yang masih muda diiris memanjang, kemudian direbus dengan bumbu sesuai dengan selera pembuatnya.
                      Lantaran penggunaan bahannya dari batang kelapa, sehingga membuat rasanya menjadi unik.
                     Gabing biasanya disajikan berkuah, namun ada juga yang menyajikan gabing tanpa dengan kuah. Untuk pelengkap,
@@ -96,7 +96,7 @@
           <div class="row g-0">
             <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Seruit.jpg" height="420px" class="rounded-3 float-end w-100"></div>
             <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2">Seruit</h2>
+                <h2 class="ps-2 text-md-center">Seruit</h2>
                 <p class="lead mb-0 ps-2">Kuliner seruit ini terbuat dari ikan bakar, yang disajikan dengan berbagai macam sambal khas dari kota Bandar Lampung, misalnya sambal tempoyak udang dan sambal asam kembang.
                   Seruit dapat menggunakan berbagai macam ikan, namun jenis ikan yang biasanya digunakan dalam kuliner ini adalah ikan sungai, contohnya ikan balide, ikan layis, dan ikan baung. Sayuran sering disajikan bersamaan dengan seruit sebagai lalapan.</p>
             </div>
@@ -104,54 +104,20 @@
       </div>
   </section>
 
-    <!--Footer-->
-    <footer class="bd-footer py-5 mt-5 rounded-top" style="background-color:#00BFFF ;">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-lg-3 mb-3">
-            <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="../index.html" aria-label="Liburan Yuk!">
-              <img src="../Gambar/Logo1.png" alt="" height="40px"style="background-color: rgb(255, 255, 255)" class="rounded-circle">
-              <span class="fs-5 fw-bold">  Liburan Yuk!</span>
-            </a>
-            <ul class="list-unstyled small">
-              <li class="mb-1 fw-bold">Project Webdevelop Kelas Sore Angkatan 2020 Universitas Tarumanegara.</li>
-              <li class="mb-1 fw-bold">Anggota :</li>
-              <li class="mb-1 fw-bold">Brian Wijaya_535200069</li>
-              <li class="mb-1 fw-bold">Erwin Surya Effendy_535200075</li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Destination</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>  
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Cuisine</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Entertainment</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>  
-          </div>
-          <div class="col-6 col-lg-2 mb-3 text-center">
-            <h5>Lodging</h5>
-            <ul class="list-unstyled small">
-              <li>hal 1</li>
-              <li>hal 2</li>
-              <li>hal 3</li>
-            </ul>  
-          </div>
+    <!--footer-->
+    <footer class="bd-footer py-1 mt-3 rounded-top" style="background-color:#00BFFF ;">
+      <div class="container py-4">
+        <div class="col-lg-5">
+          <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="../index.html" aria-label="Liburan Yuk!">
+            <img src="../Gambar/Logo1.png" alt="" height="40px"style="background-color: rgb(255, 255, 255)" class="rounded-circle">
+            <span class="fs-5 fw-bold">  Liburan Yuk!</span>
+          </a>
+          <ul class="list-unstyled small">
+            <li class="mb-1 fw-bold">Project Webdevelop Kelas Sore Angkatan 2020 Universitas Tarumanegara.</li>
+            <li class="mb-1 fw-bold">Anggota :</li>
+            <li class="mb-1 fw-bold">Brian Wijaya_535200069</li>
+            <li class="mb-1 fw-bold">Erwin Surya Effendy_535200075</li>
+          </ul>
         </div>
       </div>
     </footer>
