--- a/Project_WebDev/pages/Hot_Destination.html
+++ b/Project_WebDev/pages/Hot_Destination.html
@@ -65,17 +65,15 @@
       </div>
     </nav>
     <!--Isian-->
-    
     <section class="showcase">
       <div class="container-fluid p-0">
           <div class="row g-0" style="padding-top: 50px;">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/lembah_hijau.jpg" class="rounded-3"></div>
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Pemandian Air Panas.jpg" height="560px" class="rounded-3"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2>Lembah Hijau Lampung</h2>
-                  <p class="lead mb-0">Taman Wisata Lembah Hijau merupakan Taman Wisata, dan Waterboom terbesar di Lampung. Lokasi ini merupakan pionir wisata alam yang ada di Bumi Ruwa Jurai yang tidak kalah dengan Kebun Binatang Ragunan di Jakarta Selatan atau Waterboom Lippo Cikarang sekalipun.
-                    Sejak dibuka pada April 2007 lalu, taman wisata alam buatan Lembah Hijau sudah menjadi tempat rekreasi favorit di Lampung. Tempat rekreasi alam yang menempati lahan seluas 30 hektar ini berada di Jalan Radin Imba Kesuma Ratu, Kampung Sukajadi, Sukadanaham, Tanjung Karang Barat, Bandar Lampung.
-                    Lembah hijau terdiri dari taman rekreasi dan kebun binatang mini. Berada di area perbukitan dihiasi lembah dan sungai kecil. Tidak berlebihan apabila taman rekreasi ini diberi nama Lembah Hijau. Taman hijau yang sejuk ini menawarkan banyak kesenangan dan hiburan bagi masyarakat Lampung dan khususnya bagi wisatawan dalam negeri yang datang ke Lampung.
-                   area yang luas, Taman Wisata Lembah Hijau menyediakan berbagai wahana hiburan variatif di antaranya adalah: taman satwa, kolam renang dan waterboom, Cinema 4D, Boom Boom Car, arena bermain sepak bola, kereta mini, dan lainnya.
+                  <h2>Pemandian Air Panas Way Belerang</h2>
+                  <p class="lead mb-0">Way Belerang merupakan sebuah tempat pemandian air panas di lereng Gunung Rajabasa, Lampung Selatan, Provinsi Lampung. Suasana alamnya sangat sejuk dan alami yang dipenuhi dengan pepohonan besar.
+                    Di tempat ini pengunjung bisa melakukan relaksasi dengan berendam di air panas yang dipercaya bisa menyembuhkan penyakit rematik, gatal gatal, penyakit kulit lainnya. Sesuai namanya, air panas di Way Belerang memang bercampur belerang. Oleh karena itu, warga yang datang ke sini bukan hanya untuk berwisata semata, banyak juga yang berbasah ria sambil melakukan terapi penyakit kulit, rematik dan sebagainya.
+                    Yang menarik, di way Belerang juga ada taman bermain untuk anak-anak, bahkan ada fasilitas kolam renang air tawar dan flying fox, balai pertemuan, arena bermain, kantin, delman lengkap dengan kudanya dan arena taman terbuka.
                   </p>
               </div>
           </div>
