--- a/Project_WebDev/pages/Hot_Destination.html
+++ b/Project_WebDev/pages/Hot_Destination.html
@@ -104,7 +104,7 @@
               <p class="lead mb-0">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisatawan. Termasuk Taman Nasional Way Kambas.
                 Sebagai tempat pelestarian gajah dan badak, taman nasional ini ada bertujuan untuk sarana konservasi dan zonasi berbagai fauna dari kepunahan. Selain itu juga sebagai sarana edukasi kepada wisatawan agar lebih cinta fauna dan melestarikannya.
                 Fasilitas dalam Taman Nasional ini sudah sangat memadai. Sarana dan prasarananya bisa dikatakan tersedia dan dikelola dengan baik.
-                Mulai dari penginapan, arena-arena wisata, pusat informasi, WC, dan mushola Selain pemandangan alamnya yang indah, tentu taman nasional ini memiliki banyak daya tarik yang menjadi keunikannya tersendiri. Terlebih lagi ikon gajah sumatranya, tentu binatang berukuran besar ini sangat menarik perhatian wisatawan..</p>
+                Mulai dari penginapan, arena-arena wisata, pusat informasi, WC, dan mushola Selain pemandangan alamnya yang indah, tentu taman nasional ini memiliki banyak daya tarik yang menjadi keunikannya tersendiri. Terlebih lagi ikon gajah sumatranya, tentu binatang berukuran besar ini sangat menarik perhatian wisatawan.</p>
           </div>
       </div>
 
