--- a/Project_WebDev/pages/Local_Entertainment.html
+++ b/Project_WebDev/pages/Local_Entertainment.html
@@ -68,7 +68,7 @@
     <section class="showcase">
       <div class="container-fluid p-0">
           <div class="row g-0" style="padding-top: 50px;">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/lembah_hijau.jpg" class="rounded-3"></div>
+              <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/lembah_hijau.jpg" height="420px" class="rounded-3"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
                   <h2>Lembah Hijau Lampung</h2>
                   <p class="lead mb-0">Taman Wisata Lembah Hijau merupakan Taman Wisata, dan Waterboom terbesar di Lampung. Lokasi ini merupakan pionir wisata alam yang ada di Bumi Ruwa Jurai yang tidak kalah dengan Kebun Binatang Ragunan di Jakarta Selatan atau Waterboom Lippo Cikarang sekalipun.
@@ -79,33 +79,38 @@
               </div>
           </div>
           <div class="row g-0">
-              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Pulau Tegal Mas.jpeg" height="500px" class="rounded-3"></div>
+              <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Waterpark-Lampung-Walk.-Foto-Gmap-Rizki-Adhi-Wijaya.jpg" height="500px" class="rounded-3"></div>
               <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2>Pulau Tegal Mas</h2>
-                  <p class="lead mb-0">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yang menyebutnya mirip dengan Maladewa, karena eksotisme alam & penginapan terapung yang ada di sekelilingnya.
-                    Pulau Tegal Mas seolah telah menjadi magnet yang memikat hati para wisatawan sejak perkembangan akhirnya pada tahun 2017. Tak sebatas turis domestik, destinasi wisata yang berdiri di atas lahan seluas 113 Ha ini juga mulai dilirik oleh wisatawan dari berbagai negara.
-                    Kekayaan biodiversitas yang dimiliki Pulau Tegal Mas, terutama alam bawah lautnya, dinilai tak kalah dengan lokasi lain di Indonesia. Sangat cocok untuk dieksplor setiap orang yang gemar melakukan aktivitas snorkeling atau diving.
-                  Disini wisatawan akan dimanjakan dengan keindahan berbagai biota laut, mulai dari terumbu karang, anemon, hingga berbagai jenis ikan yang menjadi penghuninya.
-                  Sebagai sarana penunjang, tersedia pula dive center serta snorkeling center yang bisa dimanfaatkan pengunjung untuk informasi dan penyediaan peralatan penyelaman.
+                  <h2>Lampung Walk</h2>
+                  <p class="lead mb-0">Lampung Walk semakin menambah khazanah tempat wisata Lampung yang cocok sebagai objek wisata keluarga di saat liburan tiba.
+                    Area spot foto 3 dimensi Lampung Walk menjadi penegasan akan hal tersebut. Bahkan bisa dibilang sebagai salah – satu spot foto 3 dimensi pertama yang ada di Lampung.
+                    Namun, Lampung Walk bukan hanya sekedar berbicara tentang spot foto saja. Lampung Walk adalah tempat wisata yang memadukan konsep wisata alam terbuka, yang dikolaborasikan dalam satu kawasan yang sama dengan area olah raga, Water Boom, dan area food court untuk menikmati wisata kuliner di Lampung.
+                    Di sini juga ada Els Coffee, tempat ngopi anak muda di Bandar Lampung, asli punya orang Lampung dan kopinya asli kopi Lampung.
                   </p>
               </div>
           </div>
           <div class="row g-0">
-            <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Pulau-Pahawang-Lampung.jpg" class="rounded-3"></div>
+            <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/puncak-mas-lampung.jpg" height="540px" class="rounded-3"></div>
             <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                <h2>Pulau Pahawang</h2>
-                <p class="lead mb-0">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Saat ini Pulau ini mulai sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.
-                  Pulau Pahawang memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Pulau ini sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.</p>
+                <h2>Puncak Mas</h2>
+                <p class="lead mb-0">Puncak Mas Lampung menjadi pilihan terbaik bagi mereka yang sedang bingung mencari tempat hiburan di Lampung.
+                  Banyaknya kunjungan wisata ke Puncak Mas Lampung dikarenakan lokasinya berada di sebuah bukit, serta memiliki area yang tertata dengan baik, sehingga tersaji sebuah taman instagramable di atas ketinggian Kota Bandar Lampung.
+                  Selain itu, semua yang dibutuhkan untuk menunjang kenyamanan wisata para pengunjung tersaji lengkap di Puncak Mas Lampung, termasuk cottage, atau penginapan.
+                  Daya tarik yang pertama dari Puncak Mas Lampung adalah area utamanya berupa taman yang luas, yang tertata secara baik, serta memiliki konsep kekinian.
+                  Ada juga area food court, atau cafe yang menyajikan aneka macam makanan, dan minuman. Penataan cafe tersebut juga sangat baik, dan akan membuat nyaman pengunjung yang datang.
+                  Udara yang sejuk, suasana yang tenang, view alam yang menawan, serta dilengkapi dengan fasilitas yang baik adalah kenikmatan saat berada di lokasi tersebut.
+                </p>
             </div>
         </div>
         <div class="row g-0">
-          <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Taman Nasional Way Kambas.jpg" height="500px" class="rounded-3"></div>
+          <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Transmart Lampung.jpeg" height="500px" class="rounded-3"></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-              <h2>Taman Nasional Way Kambas</h2>
-              <p class="lead mb-0">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisatawan. Termasuk Taman Nasional Way Kambas.
-                Sebagai tempat pelestarian gajah dan badak, taman nasional ini ada bertujuan untuk sarana konservasi dan zonasi berbagai fauna dari kepunahan. Selain itu juga sebagai sarana edukasi kepada wisatawan agar lebih cinta fauna dan melestarikannya.
-                Fasilitas dalam Taman Nasional ini sudah sangat memadai. Sarana dan prasarananya bisa dikatakan tersedia dan dikelola dengan baik.
-                Mulai dari penginapan, arena-arena wisata, pusat informasi, WC, dan mushola Selain pemandangan alamnya yang indah, tentu taman nasional ini memiliki banyak daya tarik yang menjadi keunikannya tersendiri. Terlebih lagi ikon gajah sumatranya, tentu binatang berukuran besar ini sangat menarik perhatian wisatawan..</p>
+              <h2>Transmart Lampung</h2>
+              <p class="lead mb-0">Mengusung konsep yang menjadi ciri khas Transmart yaitu dengan mengkombinasikan antara berbelanja dengan hiburan, menjadi daya tarik sendiri bagi masyarakat yang ada di Bandar Lampung.
+                Kehadiran Transmart di Lampung ini adalah kabar gembira bagi para pecinta film di Bandar Lampung. Pasalnya saat ini tidak hanya ada di Mall Boemi Kedaton dan Mall Kartini saja, masyarakat juga bisa nonton di CGV Cinema Transmart Lampung.
+                Transmart memiliki ciri khas yang sangat menonjol dibandingkan dengan Hypermart lainnya, di mana Transmart mengkombinasikan antara kegiatan berbelanja dengan,  hiburan dan makanan.
+                Transmart Lampung juga memiliki Trans Studio Mini Lampung, yang merupakan fasilitas hiburan dan permainan yang menjadi Ikon dari Transmart. Aneka macam wahana yang disediakan di Trans Studio Mini Lampung diantaranya adalah Venture River, Bumper Car, Train Mini, New York Swing, Playground,  Sky Rider, dan juga Crazy Cab Coaster dengan tarif wahana berkisar antara 30 ribu sampai dengan 50 ribu rupiah.
+              </p>
           </div>
       </div>
 
