--- a/Project_WebDev/index.html
+++ b/Project_WebDev/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="col mb-5">
             <div class="card h-100">
-              <img class="card-img-top" src="Gambar/entertainment.jpg" height="180px" alt="..." />
+              <img class="card-img-top" src="Gambar/puncak-mas-lampung.jpg" alt="..." />
               <div class="card-body p-4">
                 <div class="text-center">
                   <h5 class="fw-bolder">Entertainment</h5>
