--- a/Project_WebDev/pages/Lodging.html
+++ b/Project_WebDev/pages/Lodging.html
@@ -37,7 +37,7 @@
               <a class="nav-link fs-4" href="Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active rounded-pill" style="background-color: #f1ff33;" aria-current="page" href="Lodging.html">Lodging</a>
+              <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="Lodging.html">Lodging</a>
             </li>
           </ul>
           <div class="nav-item dropdown" style="padding-left: 100px;">
@@ -70,7 +70,8 @@
           <div class="row g-0" style="padding-top: 50px;">
               <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Swiss-Belhotel Lampung.jpg" height="420px" class="rounded-3 w-100"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2 class="text-md-center">Swiss-Belhotel Lampung</h2>
+                  <h2 class="text-md-center fw-bold">Swiss-Belhotel Lampung</h2>
+                  <hr class="dropdown-divider">
                   <p class="lead mb-0">Swiss-Belhotel Lampung adalah hotel bintang 4 bertaraf internasional di Lampung dengan pemandangan laut, bukit serta landscape kota Lampung yang indah. Hotel kelas atas yang mewah ini berjarak 4 km dari CitraGarden Waterpark dan 9 km dari Museum Lampung.
                     Hotel ini menawarkan 167 kamar, mulai dari Kamar Deluxe hingga Kamar Presidential Suite yang mewah.
                     Kamar elegan yang bernuansa hangat dilengkapi dengan Wi-Fi gratis, TV layar datar, alat pembuat kopi, serta brankas. Kamar di kelas yang lebih tinggi dan suite memiliki kulkas mini, area duduk, dan kamar tidur terpisah. Suite di kelas yang lebih tinggi dilengkapi dengan furnitur mewah, ruang keluarga dan ruang makan, serta jendela setinggi langit-langit.
@@ -81,7 +82,8 @@
           <div class="row g-0">
               <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Sheraton Lampung Hotel.jpeg" height="420px" class="rounded-3 w-100 "></div>
               <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                  <h2 class="ps-2 text-md-center">Sheraton Lampung Hotel</h2>
+                  <h2 class="ps-2 text-md-center fw-bold">Sheraton Lampung Hotel</h2>
+                  <hr class="dropdown-divider">
                   <p class="lead mb-0 ps-2">Hotel dan pusat konferensi kelas atas yang terletak di kawasan bisnis kota ini berjarak 4 km dari stasiun kereta Tanjung Karang dan 3 km dari tempat berbelanja di Mal Kartini.
                     Kamar-kamar bernuansa santai dilengkapi dengan Wi-Fi gratis, TV layar datar, minibar, serta pembuat teh dan kopi. Beberapa kamar memiliki pemandangan kolam renang atau taman. Room service tersedia 24 jam.
                     Tersedia tempat parkir gratis. Terdapat restoran yang menyajikan hidangan internasional, kedai kopi/toko roti, bar lobi, dan teras. Fasilitas lainnya termasuk kolam renang outdoor dengan bak mandi air panas, serta gym, dan lapangan tenis dengan penerangan. Business center dan ruang konferensi juga tersedia. Sarapan dikenakan biaya tambahan.</p>
@@ -90,7 +92,8 @@
           <div class="row g-0">
               <div class="col-lg-6 order-lg-2 text-white showcase-img"><img src="../Gambar/Novotel_Lampung.jpg" height="420px" class="rounded-3 w-100"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text" style="padding-left: 25px;">
-                  <h2 class="text-md-center">Novotel Lampung</h2>
+                  <h2 class="text-md-center fw-bold">Novotel Lampung</h2>
+                  <hr class="dropdown-divider">
                   <p class="lead mb-0">Terletak 11 km dari taman rekreasi air dan taman rekreasi Lembah Hijau, hotel santai di gedung indah ini juga berjarak 13 km dari Museum Lampung dan 15 km dari Pantai Mutun.
                     Menampilkan panorama gunung dan pantai, kamar bernuansa hangat menyediakan Wi-Fi, TV layar datar, fasilitas pembuat teh dan kopi, serta minibar dan brankas. Kamar di kelas yang lebih tinggi dilengkapi ruang keluarga dan jendela setinggi langit-langit.
                     Fasilitas meliputi kolam air panas indoor dan outdoor, serta 2 bar dan sebuah restoran internasional. Ada juga spa, gym, dan sauna, serta business center dan tempat parkir.</p>
@@ -99,7 +102,8 @@
           <div class="row g-0">
             <div class="col-lg-6 text-white showcase-img"><img src="../Gambar/Emersia Hotel & Resort.jpg" height="420px" class="rounded-3 w-100"></div>
             <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center">Emersia Hotel & Resort</h2>
+                <h2 class="ps-2 text-md-center fw-bold">Emersia Hotel & Resort</h2>
+                <hr class="dropdown-divider">
                 <p class="lead mb-0 ps-2">Hotel kelas atas di gedung berfasad kaca modern ini memiliki panorama laut Jawa dan pegunungan di sekitarnya. Jaraknya 2 km dari Stasiun Tanjung Karang dan 9 km dari Pantai Tirtayasa.
 
                   Dilengkapi jendela setinggi langit-langit berpanorama laut, kolam renang, atau gunung, kamar sederhana ini dilengkapi Wi-Fi gratis, TV layar datar, bar mini, serta fasilitas pembuat teh dan kopi. Suite memiliki area tempat duduk, sementara suite di kelas yang lebih tinggi memiliki ruang keluarga/ruang makan terpisah. Anak-anak berusia 5 ke bawah dapat menginap tanpa biaya tambahan jika ditemani oleh orang dewasa.
